--- a/index.html
+++ b/index.html
@@ -367,35 +367,17 @@
             <b class="text">присоединяйтесь</b>
             <!--h3-->
             <ul class="footer-links list">
-              <li>
-                <a href="#" aria-label="Ccылка на Инстаграм">
-                  <img
-                    src="./images/ellipse-footer.svg"
-                    alt="Иконка Инстаграма"
-                /></a>
+              <li class="instagram-icon">
+                <a href="#" aria-label="Ccылка на Инстаграм"> </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ccылка на Твитер"
-                  ><img
-                    src="./images/twitter-footer.svg"
-                    alt="Иконка Твитера"
-                  />
-                </a>
+              <li class="twitter-icon">
+                <a href="#" aria-label="Ccылка на Твитер"> </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ccылка на Фейсбук"
-                  ><img
-                    src="./images/facebook-footer.svg"
-                    alt="Иконка Фейсбука"
-                  />
-                </a>
+              <li class="facebook-icon">
+                <a href="#" aria-label="Ccылка на Фейсбук"> </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ccылка на Линкедин"
-                  ><img
-                    src="./images/linkedin-footer.svg"
-                    alt="Иконка Линкедина"
-                /></a>
+              <li class="linkedin-icon">
+                <a href="#" aria-label="Ccылка на Линкедин"></a>
               </li>
             </ul>
           </div>
