--- a/index.html
+++ b/index.html
@@ -290,58 +290,70 @@
           <ul class="customers-list list">
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов"
-                ><img
-                  src="./images/one.svg"
-                  alt="Логотип клиентов"
-                  class="log"
-                  width="170"
-                  height="90"
-              /></a>
+                ><div class="customers-logo">
+                  <img
+                    src="./images/one.svg"
+                    alt="Логотип клиентов"
+                    class="log"
+                    width="44.3"
+                    height="49"
+                  /></div
+              ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов"
-                ><img
-                  src="./images/two.svg"
-                  alt="Логотип клиентов"
-                  width="170"
-                  height="90"
-              /></a>
+                ><div class="customers-logo">
+                  <img
+                    src="./images/two.svg"
+                    alt="Логотип клиентов"
+                    width="40"
+                    height="52"
+                  /></div
+              ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <img
-                  src="./images/three.svg"
-                  alt="Логотип клиентов"
-                  width="170"
-                  height="90"
-              /></a>
+                <div class="customers-logo">
+                  <img
+                    src="./images/three.svg"
+                    alt="Логотип клиентов"
+                    width="41"
+                    height="42.6"
+                  /></div
+              ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <img
-                  src="./images/four.svg"
-                  alt="Логотип клиентов"
-                  width="170"
-                  height="90"
-              /></a>
+                <div class="customers-logo">
+                  <img
+                    src="./images/four.svg"
+                    alt="Логотип клиентов"
+                    width="79.7"
+                    height="42"
+                  /></div
+              ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <img
-                  src="./images/five.svg"
-                  alt="Логотип клиентов"
-                  width="170"
-                  height="90"
-              /></a>
+                <div class="customers-logo">
+                  <img
+                    src="./images/five.svg"
+                    alt="Логотип клиентов"
+                    width="59"
+                    height="47"
+                  /></div
+              ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <img
-                  src="./images/six.svg"
-                  alt="Логотип клиентов"
-                  width="170"
-                  height="90"
-              /></a>
+                <div class="customers-logo">
+                  <img
+                    src="./images/six.svg"
+                    alt="Логотип клиентов"
+                    width="88.5"
+                    height="45.4"
+                  /></div
+              ></a>
             </li>
           </ul>
         </div>
