--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
         </nav>
         <ul class="auth-nav list">
           <li class="item">
+            <svg class="icon-envelope">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
             <a href="#" class="link">info@devstudio.com</a>
           </li>
           <li class="item">
+            <svg class="icon-phone">
+              <use href="./images/sprite.svg#icon-cell-phone"></use>
+            </svg>
             <a href="#" class="link cell">+38 096 111 11 11</a>
           </li>
         </ul>
