--- a/index.html
+++ b/index.html
@@ -296,69 +296,51 @@
           <ul class="customers-list list">
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов"
-                ><div class="customers-logo">
-                  <img
-                    src="./images/one.svg"
-                    alt="Логотип клиентов"
-                    class="log"
-                    width="44.3"
-                    height="49"
-                  /></div
-              ></a>
+                ><div class="customers-container">
+                  <svg class="customers-one">
+                    <use href="./images/sprite.svg#icon-one"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов"
-                ><div class="customers-logo">
-                  <img
-                    src="./images/two.svg"
-                    alt="Логотип клиентов"
-                    width="40"
-                    height="52"
-                  /></div
+                ><div class="customers-container">
+                  <svg class="customers-two">
+                    <use href="./images/sprite.svg#icon-two"></use>
+                  </svg></div
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <div class="customers-logo">
-                  <img
-                    src="./images/three.svg"
-                    alt="Логотип клиентов"
-                    width="41"
-                    height="42.6"
-                  /></div
+                <div class="customers-container">
+                  <svg class="customers-three">
+                    <use href="./images/sprite.svg#icon-three"></use>
+                  </svg></div
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <div class="customers-logo">
-                  <img
-                    src="./images/four.svg"
-                    alt="Логотип клиентов"
-                    width="79.7"
-                    height="42"
-                  /></div
+                <div class="customers-container">
+                  <svg class="customers-four">
+                    <use href="./images/sprite.svg#icon-four"></use>
+                  </svg></div
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <div class="customers-logo">
-                  <img
-                    src="./images/five.svg"
-                    alt="Логотип клиентов"
-                    width="59"
-                    height="47"
-                  /></div
+                <div class="customers-container">
+                  <svg class="customers-five">
+                    <use href="./images/sprite.svg#icon-five"></use>
+                  </svg></div
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link" aria-label="Ссылка на клиентов">
-                <div class="customers-logo">
-                  <img
-                    src="./images/six.svg"
-                    alt="Логотип клиентов"
-                    width="88.5"
-                    height="45.4"
-                  /></div
+                <div class="customers-container">
+                  <svg class="customers-six">
+                    <use href="./images/sprite.svg#icon-six"></use>
+                  </svg></div
               ></a>
             </li>
           </ul>
