--- a/index.html
+++ b/index.html
@@ -40,16 +40,20 @@
         </nav>
         <ul class="auth-nav list">
           <li class="item">
-            <svg class="icon-envelope">
-              <use href="./images/sprite.svg#icon-envelope"></use>
-            </svg>
-            <a href="#" class="link">info@devstudio.com</a>
+            <a href="#" class="link">
+              <svg class="icon-envelope">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <svg class="icon-phone">
-              <use href="./images/sprite.svg#icon-cell-phone"></use>
-            </svg>
-            <a href="#" class="link cell">+38 096 111 11 11</a>
+            <a href="#" class="link cell">
+              <svg class="icon-phone">
+                <use href="./images/sprite.svg#icon-cell-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -72,7 +76,12 @@
           <!--<h2></h2>-->
           <ul class="advantages list">
             <li class="item">
-              <a href="#" class="link antenna-icon"></a>
+              <div class="advantages-icon">
+                <svg class="antenna-icon">
+                  <use href="./images/sprite.svg#icon-Group"></use>
+                </svg>
+              </div>
+
               <h3 class="list">Внимание к деталям</h3>
               <p class="list">
                 Идейные соображения, а также начало повседневной работы по
@@ -80,7 +89,11 @@
               </p>
             </li>
             <li class="item">
-              <a href="#" class="link clock-icon"> </a>
+              <div class="advantages-icon">
+                <svg class="clock-icon">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="list">Пунктуальность</h3>
               <p class="list">
                 Задача организации, в особенности же рамки и место обучения
@@ -88,7 +101,11 @@
               </p>
             </li>
             <li class="item">
-              <a href="#" class="link computer-icon"></a>
+              <div class="advantages-icon">
+                <svg class="computer-icon">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="list">Планирование</h3>
               <p class="list">
                 Равным образом консультация с широким активом в значительной
@@ -96,7 +113,11 @@
               </p>
             </li>
             <li class="item">
-              <a href="#" class="link astronaut-icon"></a>
+              <div class="advantages-icon">
+                <svg class="astronaut-icon">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="list">Современные технологии</h3>
               <p class="list">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -114,7 +135,7 @@
             <li class="item">
               <a href="#" class="link">
                 <img
-                  src="./images/desktop-attachment.svg"
+                  src="./images/desktop-attachment.jpg"
                   alt="ноутбук на
                         столе"
                   width="370"
@@ -126,7 +147,7 @@
             <li class="item">
               <a href="#" class="link">
                 <img
-                  src="./images/mobile-attachment.svg"
+                  src="./images/mobile-attachment.jpg"
                   alt="мобильный
                         телефон"
                   width="370"
@@ -138,7 +159,7 @@
             <li class="item">
               <a href="#" class="link">
                 <img
-                  src="./images/design-decision.svg"
+                  src="./images/design-decision.jpg"
                   alt="экран монитора"
                   width="370"
                   height="294"
@@ -367,16 +388,20 @@
             <b class="text">присоединяйтесь</b>
             <!--h3-->
             <ul class="footer-links list">
-              <li class="instagram-icon">
-                <a href="#" aria-label="Ccылка на Инстаграм"> </a>
+              <li>
+                <a href="#" aria-label="Ccылка на Инстаграм"
+                  ><svg class="instagram-svg" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="twitter-icon">
+              <li>
                 <a href="#" aria-label="Ccылка на Твитер"> </a>
               </li>
-              <li class="facebook-icon">
+              <li>
                 <a href="#" aria-label="Ccылка на Фейсбук"> </a>
               </li>
-              <li class="linkedin-icon">
+              <li>
                 <a href="#" aria-label="Ccылка на Линкедин"></a>
               </li>
             </ul>
