--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <li class="item">
               <a href="#" class="link"
                 ><img
-                  src="./images/John.svg"
+                  src="./images/John.jpg"
                   alt="Фото Джона"
                   width="270"
                   height="260"
@@ -211,7 +211,7 @@
             <li class="item">
               <a href="#" class="link"
                 ><img
-                  src="./images/Marta.svg"
+                  src="./images/Marta.jpg"
                   alt="Фото Марты"
                   width="270"
                   height="260"
@@ -244,7 +244,7 @@
             <li class="item">
               <a href="#" class="link"
                 ><img
-                  src="./images/Robert.svg"
+                  src="./images/Robert.jpg"
                   alt="Фото Роберта"
                   width="270"
                   height="260"
@@ -277,7 +277,7 @@
             <li class="item">
               <a href="#" class="link"
                 ><img
-                  src="./images/Martin.svg"
+                  src="./images/Martin.jpg"
                   alt="Фото Мартина"
                   width="270"
                   height="260"
