--- a/index.html
+++ b/index.html
@@ -187,24 +187,32 @@
               <p class="text list">Product Designer</p>
               <ul class="networks list">
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/instagram.svg" alt="Instagram"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="instagram-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="twitter-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="facebook-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/linkedin.svg" alt="Linkedin"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="linkedin-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -220,24 +228,32 @@
               <p class="text list">Frontend Developer</p>
               <ul class="networks list">
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/instagram.svg" alt="Instagram"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="instagram-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="twitter-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="facebook-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="network-item">
-                  <a href="#"
-                    ><img src="./images/linkedin.svg" alt="Linkedin"
-                  /></a>
+                  <a href="#" class="network-link">
+                    <svg class="linkedin-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -252,25 +268,33 @@
               <h3 lang="en" class="title list">Robert Jakis</h3>
               <p class="text list">Marketing</p>
               <ul class="networks list">
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/instagram.svg" alt="Instagram"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="instagram-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="twitter-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="facebook-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/linkedin.svg" alt="Linkedin"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="linkedin-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -285,25 +309,33 @@
               <h3 lang="en" class="title list">Martin Doe</h3>
               <p class="text list">UI Designer</p>
               <ul class="networks list">
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/instagram.svg" alt="Instagram"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="instagram-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="twitter-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="facebook-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="item">
-                  <a href="#"
-                    ><img src="./images/linkedin.svg" alt="Linkedin"
-                  /></a>
+                <li class="network-item">
+                  <a href="#" class="network-link">
+                    <svg class="linkedin-svg" width="20px" height="20px">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -389,20 +421,39 @@
             <!--h3-->
             <ul class="footer-links list">
               <li>
-                <a href="#" aria-label="Ccылка на Инстаграм"
-                  ><svg class="instagram-svg" width="20px" height="20px">
+                <a
+                  href="#"
+                  class="network-link"
+                  aria-label="Ccылка на Инстаграм"
+                  ><svg class="instagram-footer" width="20px" height="20px">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="#" aria-label="Ccылка на Твитер"> </a>
+                <a href="#" class="network-link" aria-label="Ccылка на Твитер">
+                  <svg class="twitter-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="#" aria-label="Ccылка на Фейсбук"> </a>
+                <a href="#" class="network-link" aria-label="Ccылка на Фейсбук">
+                  <svg class="facebook-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="#" aria-label="Ccылка на Линкедин"></a>
+                <a
+                  href="#"
+                  class="network-link"
+                  aria-label="Ccылка на Линкедин"
+                >
+                  <svg class="linkedin-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
