--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <ul class="auth-nav list">
           <li class="item">
-            <a href="#" class="link">
+            <a href="mailto:info@devstudio.com" class="link">
               <svg class="icon-envelope">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
@@ -48,7 +48,7 @@
             >
           </li>
           <li class="item">
-            <a href="#" class="link cell">
+            <a href="tel:+380961111111" class="link cell">
               <svg class="icon-phone">
                 <use href="./images/sprite.svg#icon-cell-phone"></use>
               </svg>
@@ -461,7 +461,11 @@
         <!--Подпишитесь на рассылку-->
         <div class="slogan">
           <b class="text">Подпишитесь на рассылку</b>
-          <a href="#" class="button-web sign">Подписаться</a>
+          <a href="#" class="button-web sign"
+            >Подписаться<svg class="icon-sign" width="24px" height="24px">
+              <use href="./images/sprire.svg#icon-send"></use>
+            </svg>
+          </a>
         </div>
       </div>
       <p class="bottom-info container">2020 | Developed by GoIT Students</p>
