--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
         <div class="slogan">
           <b class="text">Подпишитесь на рассылку</b>
           <a href="#" class="button-web sign"
-            >Подписаться<svg class="icon-sign" width="24px" height="24px">
-              <use href="./images/sprire.svg#icon-send"></use>
+            >Подписаться<svg class="icon-send" width="24px" height="24px">
+              <use href="./images/sprite.svg#icon-icon-send"></use>
             </svg>
           </a>
         </div>
