--- a/portfolio.html
+++ b/portfolio.html
@@ -39,21 +39,19 @@
         </nav>
         <ul class="auth-nav list">
           <li class="item">
-            <a href="#" class="link"
-              ><img
-                src="./images/envelope.svg"
-                alt="Конверт"
-                class="icon"
-              />info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-envelope">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="#" class="link"
-              ><img
-                src="./images/cell-phone.svg"
-                alt="Телефон"
-                class="icon"
-              />+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="link cell">
+              <svg class="icon-phone">
+                <use href="./images/sprite.svg#icon-cell-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -66,7 +64,7 @@
         <nav>
           <ul class="filters container list">
             <li>
-              <button class="button">Все</button>
+              <button class="button current">Все</button>
             </li>
             <li>
               <button class="button">Веб-сайты</button>
@@ -283,34 +281,39 @@
             <!--h3-->
             <ul class="footer-links list">
               <li>
-                <a href="#" aria-label="Ccылка на Инстаграм">
-                  <img
-                    src="./images/ellipse-footer.svg"
-                    alt="Иконка Инстаграма"
-                /></a>
-              </li>
-              <li>
-                <a href="#" aria-label="Ccылка на Твитер"
-                  ><img
-                    src="./images/twitter-footer.svg"
-                    alt="Иконка Твитера"
-                  />
+                <a
+                  href="#"
+                  class="network-link"
+                  aria-label="Ccылка на Инстаграм"
+                  ><svg class="instagram-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a href="#" aria-label="Ccылка на Фейсбук"
-                  ><img
-                    src="./images/facebook-footer.svg"
-                    alt="Иконка Фейсбука"
-                  />
+                <a href="#" class="network-link" aria-label="Ccылка на Твитер">
+                  <svg class="twitter-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a href="#" aria-label="Ccылка на Линкедин"
-                  ><img
-                    src="./images/linkedin-footer.svg"
-                    alt="Иконка Линкедина"
-                /></a>
+                <a href="#" class="network-link" aria-label="Ccылка на Фейсбук">
+                  <svg class="facebook-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="network-link"
+                  aria-label="Ccылка на Линкедин"
+                >
+                  <svg class="linkedin-footer" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
@@ -318,10 +321,14 @@
         <!--Подпишитесь на рассылку-->
         <div class="slogan">
           <b class="text">Подпишитесь на рассылку</b>
-          <div class="button-web sign"><a href="#">Подписаться</a></div>
+          <a href="#" class="button-web sign"
+            >Подписаться<svg class="icon-send" width="24px" height="24px">
+              <use href="./images/sprite.svg#icon-icon-send"></use>
+            </svg>
+          </a>
         </div>
       </div>
-      <p class="bottom-info">2020 | Developed by GoIT Students</p>
+      <p class="bottom-info container">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
